# swagger.json
@@ -74,6 +74,9 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -150,6 +153,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -202,6 +208,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "releaseDate": {
+                  "example": "any"
+                },
                 "title": {
                   "example": "any"
                 },
@@ -211,16 +220,13 @@
                 "duration": {
                   "example": "any"
                 },
-                "releaseDate": {
-                  "example": "any"
-                },
                 "director": {
                   "example": "any"
                 },
                 "cast": {
                   "example": "any"
                 },
-                "movieId": {
+                "cinemaId": {
                   "example": "any"
                 }
               }
@@ -230,6 +236,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -296,7 +305,7 @@
                 "cast": {
                   "example": "any"
                 },
-                "movieId": {
+                "cinemaId": {
                   "example": "any"
                 }
               }
@@ -306,6 +315,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
